scrollbar in dashboard sidebar and bugs in events type2

--- a/src/screens/cadashboard/css/caLeaderboard.css
+++ b/src/screens/cadashboard/css/caLeaderboard.css
@@ -101,6 +101,8 @@
 
 }
 #optionsToggle{
+    overflow-x: hidden;
+    overflow-y: scroll;
   
     text-align: left;
     margin-top: 15%;
@@ -119,7 +121,25 @@
     
 
 }
+#optionsToggle::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #F5F5F5;
+}
 
+#optionsToggle::-webkit-scrollbar
+{
+	width: 8px;
+	background-color: #F5F5F5;
+}
+
+#optionsToggle::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #F39423;
+}
 .linkEventson-inactive{
 
     padding-left: 10%;
